<resources>
    <string name="app_name">Photos-Android</string>
    <string name="action_settings">Settings</string>
    <string name="create_album">Create Album</string>
    <string name="insert_album_name">Insert a name for your album</string>
    <string name="my_album">My Album</string>
    <string name="photo_album">Photo Album</string>

    <string name="action_edit">Edit Album</string>
    <string name="action_delete">Delete Album</string>
    <string name="title_activity_photo">PhotoActivity</string>

    <string name="tags">Tags:</string>
    <string name="insert_tag">Enter Tag Key and Value</string>
    <string name="delete_tag_dialog">Enter Tag Key and Value to Delete</string>

    <string name="tag_key">Location</string>
    <string name="tag_value">New York</string>

    <string name="key_prompt">Enter the Key</string>
    <string name="value_prompt">Enter the Value</string>

    <string name="delete_photo">Delete Photo</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="add_tag">Add Tag</string>

    <string name="search_hint">Search</string>
</resources>
