<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_tag_dialog"
        android:textSize="18sp"
        />
    <TextView
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_prompt" />
    <EditText
        android:id="@+id/photo_tag_delete_key"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/tag_key"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_prompt" />
    <EditText
        android:id="@+id/photo_tag_delete_value"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/tag_value"/>

</LinearLayout>